OneDrive/Pictures/Desktop/manifest/pods/alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
spec:
 containers: 
  - name:  alpine
    image: alpine:3.18
