OneDrive/Pictures/Desktop/manifest/pods/antiafiinity.yaml
apiVersion: v1 
kind: Pod
metadata:
   name: alpine
spec:
  affinity: 
    podAntiAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
              - labelSelector:
                     matchLabels:
                         name: apache
                topologyKey: kubernetes.io/hostname
  containers:
     - name: httpd
       image: httpd
       resources:
          limits:
             memory: "128Mi"
             cpu: "500m"
       ports:
         - containerPort: 80
