OneDrive/Pictures/Desktop/manifest/pods/apache.yaml
apiVersion:  apps/v1pp
kind: Deployment
metadata:
  name: apache
spec:
 minReadySeconds: 5
 replicas: 3
 selector: 
   matchLabels:
     app: apache
 strategy:
   type: RollingUpdate
   rollingUpdate:
     maxSurge: 50%
     maxUnavailable: 50%
 template:
   metadata:
     name: apache
     labels: 
       app: apache
       env: dev
       version: "v1.0"
   spec:
     containers:
       - name: apache
         image: httpd:2.4
         args:
          - sleep
          - 1d
         readinessProbe:
           httpGet:
            path: /
            port: 80



---
apiVersion:
kind:
metadata:
spec:
