OneDrive/Pictures/Desktop/manifest/pods/nodename.yaml
apiVersion: v1
kind: Pod
metadata:
 name: alpine
spec:
  nodeName: aks-nodepool1-24420573-vmss000001
  containers: 
    - name: alpine
      image: alpine
      ports: 
        - name: alpine
          containerPort: 80
      args:
        - sleep
        - 1d
