OneDrive/Pictures/Desktop/manifest/pods/nodeselector2.yaml
apiVersion: v1 
kind: Pod
metadata:
  name: http
spec:
   nodeSelector: 
     kubernetes.io/hostname: aks-nodepool1-41862322-vmss000001
   containers:
     - name: http
       image: httpd
       ports: 
         - name: http 
           containerPort: 80
      resources: 
          limits:
             cpu: "500m"
             memory: "250Mi"
