OneDrive/Pictures/Desktop/manifest/pods/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apache
  labels:
    name: apache
spec:
  containers:
  - name: apache
    image:  httpd
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
