OneDrive/Pictures/Desktop/manifest/pods/staeset2.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: data11
spec: 
  minReadySeconds: 5
  replicas: 2
  selector: 
     matchLabels:
         app: data
  serviceName: sqlsv
  template:  
      metadata:
          labels:
            app: data
      spec: 
         containers:
           - name:  data1
             image: mysql:8.0-debian
             ports:
               - name: data
                 containerPort:  30001
             resources:
                limits:
                   cpu: "1000m"
                   memory: "500Mi"
             volumeMounts:
                 - name: data
                   mountPath: /var/lib/data
  volumeClaimTemplates:
         - metadata:
             name: data
           spec:
             selector:  
               matchLabels:
                  app: data
             storageClassName: my-csi-plugin
             resources:
                requests:  
                   storage: 4Gi
             accessModes:
                - ReadWriteOnce
