OneDrive/Pictures/Desktop/manifest/pods/trail2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-pod
spec:
  restartPolicy: OnFailure
  containers:
    - name: alpine
      image: alpine
      resources:
       limits:
        cpu: "500m"
        memory: "250Mi"
