OneDrive/Pictures/Desktop/manifest/pods/deplo1y.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http
spec:
  minReadySeconds: 5
  replicas: 4
  selector:
    matchLabels:
      app: http
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: http
    spec:
      containers:
        - name: http
          image: httpd:2
          workingDir: /mnt
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              memory: 256Mi
              cpu: 500m
          livenessProbe:
            httpGet:
              path: /   # Change this to your actual health check path
              port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: NodePort
  selector:
    app: http
  ports: 
  - port: 80
    targetPort: 80
    nodePort: 30001
