OneDrive/Pictures/Desktop/manifest/pods/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  minReadySeconds: 30
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jenkins
   rollingUpdate:
      maxSurge: 40%
      maxUnavailable: 40%
      strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jenkins
        env: dev
        version: "v1.0"
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins
        resources:
          limits:
            cpu: "500m"
            memory: "250Mi"
        ports:
        - name: jenkins
          containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
    - name: jenkins
      port: 8080
      nodePort: 31000
      targetPort: 8080
