OneDrive/Pictures/Desktop/manifest/pods/http.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  type: NodePort
  port: 
    nodePort: 32000
    port: 8080
    targetport: 8080
