OneDrive/Pictures/Desktop/manifest/pods/nginxdeploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
 minReadySeconds: 5
 replicas: 3
selector: 
strategy:
 type: RollingUpdate
 rollingUpdate:
   maxSurge: 25%
   maxUnavailable: 25%
template:
  metadata:
    name: nginx
    labels: 
      app: nginx
      version: "v1.0"
  spec: 
    containers:
     - name: nginx 
       image: ng
       ports:
         containerPort: 80
       resources: 
         limits:
           cpu: "500m"
           memory: "250Mi"         
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector: 
    app: nginx
  ports:
    - name: nginx
      port: 80
      nodePort: 31000
      targetPort: 80
