OneDrive/Pictures/Desktop/manifest/pods/nop.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: jenkins
spec:
  minReadySeconds: 5
  replicas: 10
  selector:
    matchLabels:  
      app: jenkins
  strategy: 
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 25%
      maxUnavailable: 25%
   template:
     metadata:
       labels: 
         app: jenkins
         env: dev
         version: "v1.0"
     spec:
        containers:
          - name: jenkins
            image: jenkins/jenkins
            ports:
              containerPort: 8080
            resources:
              limits:
                cpu: "500m"
                memory: "250Mi"

  

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  type: NodePort
  ports:
    - name: jenkins
      port: 8080
      nodePort: 31000
      targetPort: 8080
