OneDrive/Pictures/Desktop/manifest/pods/service.yaml
---
apiVersion: v1 
kind: Service
metadata:
  name: http
spec:
    type: NodePort
    selector:
       app: jenkins
    ports:
     - port: 8080
       targetPort: 8080
       nodePort: 31000
