OneDrive/Pictures/Desktop/manifest/pods/sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlsv
spec:
   clusterIP: None
   selector: 
      name: sql
   ports:
      - name: sql
        port: 30001
        targetPort: 30001
