OneDrive/Pictures/Desktop/manifest/pods/springpecl.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spec-pod
spec:
  type: NodePort
  ports:
    - name: spec
      port: 8080
      nodePort: 31000
      targetport: 8080
