OneDrive/Pictures/Desktop/manifest/pods/tomcat.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: tomcat
spec:
 minReadySeconds: 5
 replicas: 4
 selector: 
   matchLabels:
     app: tomcat
 strategy:
   type:  RollingUpdate 
   rollingUpdate:
     maxSurge	: 50%
     maxUnavailable: 50%
 template: 
   metadata:
     labels: 
       app: tomcat
       env: dev 
       version: "v1.0"
   spec: 
    containers:
      - name: tomcat
        image: tomcat:11.0
        ports:
          - name: tomcat
            containerPort: 8080
        resources:
         limits:
           cpu: "500m"
           memory: "250Mi"

        

---
apiVersion: v1
kind: Service
metadata:
  name: tomcat
spec:
   selector: 
     app: tomcat
   type: NodePort   
   ports:
     - name: tomcat
       port: 8080
       nodePort: 31000
       targetPort: 8080
