OneDrive/Pictures/Desktop/manifest/pods/ingress1.yaml
#deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: jenkins
spec:
  minReadySeconds: 5
  replicas: 1
  selector:
    matchLabels: 
        app: jenkins
  strategy:
     type: RollingUpdate
     rollingUpdate: 
        maxSurge: 25%
        maxUnavailable: 25%
  template:
      metadata:
         labels:
            app: jenkins
      spec:
       containers:
           - name: jenkins
             image: jenkins/jenkins
             ports:
               - name: jenkins
                 containerPort: 8080
# service
---

apiVersion: v1 
kind: Service
metadata:
   name: jenkins
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
    - name: jenkins
      port: 8080
      targetPort: 8080


# Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: jenkins.bar.com  # Replace with your actual hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
